--- a/Documents/GitHub/crud-app/client/src/App.css
+++ b/Documents/GitHub/crud-app/client/src/App.css
@@ -12,7 +12,7 @@
   align-items: center;
 }
 
-.information input {
+input {
   width: 300px;
   height: 50px;
   font-size: 20px;
@@ -27,4 +27,33 @@
 
 .information button:hover {
   cursor: pointer;
+}
+
+.employeeBtn {
+  width: 320px;
+  height: 50px;
+  margin-top: 15px;
+}
+
+.employees {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  /* background-color: red; */
+}
+
+.employee {
+  width: 700px;
+  height: auto;
+  /* max-height: 160px; */
+  border: 1px solid black;
+  margin: 10px;
+  padding: 10px;
+  display: flex;
+  font-family: "Courier New", Courier, monospace;
+}
+
+.employee h3 {
+  margin: 20px;
 }
